# YoYo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build-run.sh  q
Sandbox/: CMakeLists.txt
Sandbox/assets/animations/: HipHopDancing.yanimation  VillagerRunning.yanimation  slash.yanimation
Sandbox/assets/materials/: Beta_HighLimbsGeoSG3.ymaterial  Beta_Joints_MAT1.ymaterial  DefaultMaterial.ymaterial  Material.ymaterial  People_texture_map.ymaterial  colormap.ymaterial  mutant_M.ymaterial
Sandbox/assets/meshes/: Beta_Joints.001.ymesh  Beta_Joints.ymesh  Beta_Surface.001.ymesh  Beta_Surface.ymesh  Cube.ymesh  Mesh.021.ymesh  Mesh_001-mesh.ymesh  MutantMesh.ymesh  Plane.ymesh  peasant_1-lib.ymesh  peasant_1Mesh.ymesh  peasant_1Mesh_004-mesh.ymesh  pine.ymesh
Sandbox/assets/models/: Humanoid.yo  Peasant.yo  Running.yo  character-digger.yo  claptrap.yo  cube.yo  mutant.yo  pine.yo  plane.yo  trunk.yo  villager.yo
Sandbox/assets/shaders/: blit_shader.frag  compile_shaders.bat  full_screen_shader.vert  lit_instanced_shader.vert  lit_shader.frag  lit_shader.vert  lit_skinned_debug_shader.frag  lit_skinned_debug_shader.vert  lit_skinned_shader.vert  offscreen_shadow_instanced_shader.vert  offscreen_shadow_shader.frag  offscreen_shadow_shader.vert  offscreen_skinned_shadow_shader.vert  unlit_collider_debug_shader.frag  unlit_instanced_shader.vert  unlit_particle_shader.frag  unlit_shader.frag
Sandbox/assets/skeletal_meshes/: HipHopDancing.yskmesh  Humanoid.yskmesh  Running.yskmesh  mutant.yskmesh  test.yskmesh
Sandbox/assets/textures/: colormap.yo  container2.yo  container2_specular.yo  dirt.yo  people_texture_map.yo  prototype_512x512_white.yo  white.yo
Sandbox/src/: Sandbox.cpp  Sandbox.h
Sandbox/src/ECS/: Entity.cpp  Entity.h  EntityImpl.h  Scene.cpp  Scene.h  System.h
Sandbox/src/ECS/Components/: Components.cpp  Components.h  RenderableComponents.cpp  RenderableComponents.h
Sandbox/src/Editor/: EditorEvents.cpp  EditorEvents.h  EditorLayer.cpp  EditorLayer.h
Sandbox/src/Editor/Panel/: IPanel.cpp  IPanel.h  InspectorPanel.cpp  InspectorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
Sandbox/src/ParticleSystem/: Particles.cpp  Particles.h
Sandbox/src/Physics/: Collider.cpp  Collider.h  Physics3D.cpp  Physics3D.h  PhysicsEvents.cpp  PhysicsEvents.h  PhysicsTypes.cpp  PhysicsTypes.h
Sandbox/src/SceneGraph/: SceneGraph.cpp  SceneGraph.h
Sandbox/src/Scripts/: CameraController.cpp  CameraController.h  DemoModel.cpp  DemoModel.h  Destructable.cpp  Destructable.h  Enemy.cpp  Enemy.h  NativeScript.cpp  NativeScript.h  Process.cpp  Process.h  Projectile.cpp  Projectile.h  ScriptEvents.cpp  ScriptEvents.h  ScriptableEntity.cpp  ScriptableEntity.h  Sun.cpp  Sun.h  Turret.cpp  Turret.h  Unit.cpp  Unit.h  UnitController.cpp  UnitController.h  VillageManager.cpp  VillageManager.h  Villager.cpp  Villager.h
YoYo/: CMakeLists.txt
YoYo/include/: Yoyo.h
YoYo/src/: Defines.cpp  Defines.h  ypch.h
YoYo/src/Core/: Application.cpp  Application.h  Assert.cpp  Assert.h  EntryPoint.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Memory.cpp  Memory.h  Time.cpp  Time.h
YoYo/src/ECS/: Entity.cpp  Entity.h  EntityImpl.h  Scene.cpp  Scene.h
YoYo/src/ECS/Components/: Components.cpp  Components.h
YoYo/src/Events/: ApplicationEvent.cpp  ApplicationEvent.h  Event.cpp  Event.h
YoYo/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
YoYo/src/ImGui/Vulkan/: ImGuiVulkan.cpp  ImGuiVulkan.h
YoYo/src/Input/: Input.cpp  Input.h  InputEvent.cpp  InputEvent.h
YoYo/src/Math/: Math.cpp  Math.h  MathTypes.cpp  MathTypes.h  MatrixTransform.cpp  MatrixTransform.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h
YoYo/src/Platform/: Platform.h
YoYo/src/Platform/OSX/: OSX.cpp  OSX.h
YoYo/src/Platform/Win32/: PlatformWin32.cpp  PlatformWin32.h
YoYo/src/Renderer/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  Light.h  Lights.cpp  Lights.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderPass.cpp  RenderPass.h  RenderScene.cpp  RenderScene.h  RenderTypes.h  Renderer.cpp  Renderer.h  RendererLayer.cpp  RendererLayer.h  Shader.cpp  Shader.h  SkinnedMesh.cpp  SkinnedMesh.h  Texture.cpp  Texture.h
YoYo/src/Renderer/Meshes/: MeshComponents.cpp  MeshComponents.h
YoYo/src/Renderer/Particles/: ParticleSystemEvents.cpp
YoYo/src/Renderer/Vulkan/: VulkanInitializers.cpp  VulkanInitializers.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanMaterialSystem.cpp  VulkanMaterialSystem.h  VulkanMesh.cpp  VulkanMesh.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanResourceManager.cpp  VulkanResourceManager.h  VulkanScene.cpp  VulkanScene.h  VulkanShader.cpp  VulkanShader.h  VulkanStructures.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtils.cpp
YoYo/src/Resource/: Resource.cpp  Resource.h  ResourceEvent.cpp  ResourceEvent.h  ResourceManager.cpp  ResourceManager.h
YoYo/src/Scripting/: NativeScript.cpp  NativeScript.h
src/: Defines.h  ypch.cpp  ypch.h
src/Core/: Application.cpp  Application.h  Assert.h  EntryPoint.h  Layer.h  Log.cpp  Log.h  Memory.cpp  Memory.h  Time.cpp
src/Events/: ApplicationEvent.cpp  Event.cpp  Event.h
src/ImGui/: ImGuiLayer.cpp
src/ImGui/Vulkan/: ImGuiVulkan.cpp  ImGuiVulkan.h
src/Input/: Input.cpp  Input.h  InputEvent.cpp  InputEvent.h
src/Math/: Math.cpp  Math.h  MathTypes.cpp  MathTypes.h  MatrixTransform.cpp  MatrixTransform.h  Quaternion.cpp  Quaternion.h  Random.cpp
src/Platform/: Platform.h
src/Platform/OSX/: OSX.cpp
src/Platform/Win32/: PlatformWin32.cpp
src/Renderer/: Camera.cpp  Camera.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderPass.cpp  RenderPass.h  RenderScene.cpp  RenderScene.h  RenderTypes.cpp  RenderTypes.h  Renderer.h  RendererLayer.cpp  RendererLayer.h  Shader.h  SkinnedMesh.cpp  SkinnedMesh.h  Texture.cpp  Texture.h
src/Renderer/Particles/: ParticleSystem.cpp  ParticleSystem.h  ParticleSystemEvents.h
src/Resource/: Resource.h  ResourceEvent.cpp  ResourceEvent.h  ResourceManager.cpp  ResourceManager.h
(+23 files in other folders)
